--- a/styles/style.css
+++ b/styles/style.css
@@ -38,15 +38,15 @@ ol {
   list-style: none;
 }
 
-
 .content {
   /* display: flex; */
   display: grid;
   grid-template-columns: 711px 1fr;
   column-gap: 30px;
-
+  height: 534px;
+  overflow: hidden;
+  border: 1px solid #f00f0f; /* вспомогательная рамка */
 }
-
 
 /* СЕКЦИЯ result */
 
@@ -54,12 +54,15 @@ ol {
   width: 711px;
   height: 386px;
   margin: 78px 0 16px;
-  
 }
 
 .result__video {
   width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
+
+/* СЕКЦИЯ result - ФОРМЫ */
 
 .search-form {
   display: grid;
@@ -80,13 +83,41 @@ ol {
   margin-bottom: 5px;
 }
 
+.search-form__label {
+
+}
+
 .search-form__label-text {
   color: rgb(255, 255, 255, 0.7);
 }
 
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
 
+.search-form__textfield {
 
+}
 
+.search-form__checkbox-list {
+
+}
+
+.search-form__checkbox {
+
+}
+
+.search-form__pseudo-checkbox {
+
+}
+
+/* СЕКЦИЯ result - END --- ФОРМЫ */
 
 .button {
   align-self: end;
@@ -101,19 +132,28 @@ ol {
   padding: 6px 74px;
 }
 
-.button:active {
-  background-color: #545050; /* Проверить, почему не работает */
+.more-button {
+  width: 100%;
 }
 
 .button:hover {
   background-color: transparent;
   text-decoration: underline;
+  text-underline-position: under;
+  cursor: pointer;
 }
 
+.button:active {
+  background-color: #545050;
+  text-decoration: none;
+}
 
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
 
 /* END --- СЕКЦИЯ result */
-
 
 /* СЕКЦИЯ content__details */
 
@@ -140,12 +180,44 @@ ol {
 
 /* template карточек */
 
+.cards-list-item-template {
+
+}
+
+.content__list-item {
+  margin-bottom: 30px;
+}
+
+.content__card-link {
+  text-decoration: none;
+}
+
+.content__card-link:hover  {
+  color: #fff;
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.content__card-link:active  {
+  text-decoration: none;
+}
+
 .content__video-card {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 30px;
-
+  grid-template-rows: 107px;
 }
+
+.content__video-card-description-container {
+  height: 107px;
+  padding: 2px;
+  overflow: hidden;
+}
+
+.content__video-card-description-container:active {
+  background-color: #545050;
+}
+
 .content__video-card-title {
   font-family: Oswald, sans-serif;
   font-size: 30px;
@@ -165,7 +237,25 @@ ol {
 }
 
 .content__video-card-thumbnail {
-  width: 100%;
+  height: 107px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.error-template {
+  border-color: #545050;
+}
+
+.error {
+
+}
+
+.error__title {
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 33px;
+  color: #fff;
 }
 
 
