--- a/styles/style.css
+++ b/styles/style.css
@@ -43,9 +43,9 @@ ol {
   display: grid;
   grid-template-columns: 711px 1fr;
   column-gap: 30px;
-  height: 534px;
+  height: 535px;
   overflow: hidden;
-  border: 1px solid #f00f0f; /* вспомогательная рамка */
+  /*border: 1px solid #f00f0f;  вспомогательная рамка */
 }
 
 /* СЕКЦИЯ result */
@@ -58,6 +58,7 @@ ol {
 
 .result__video {
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -66,29 +67,59 @@ ol {
 
 .search-form {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 225px 1fr 1fr; 
+  /* grid-template-columns: repeat(3, 1fr); */
   column-gap: 40px;
 }
 
 .search-form__fieldset {
   align-self: end;
+  border: none;
 }
 
 .search-form__fieldset-title {
   font-family: inherit;
   font-size: 18px;
-  font-weight: normal;
+  font-style: normal;
+  font-weight: 400;
   line-height: 21.6px;
   color: #fff;
   margin-bottom: 5px;
 }
 
-.search-form__label {
-
+.search-form__textfield {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21.6px;
+  color: rgb(255, 255, 255, 0.7);
+  /* background-color: #1B1919; */
+  background-color: transparent;
+  width: 100%;
+  margin: 0;
+  padding: 2.5px 0;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 0;
+  border-left: 0;
 }
 
-.search-form__label-text {
-  color: rgb(255, 255, 255, 0.7);
+.search-form__checkbox-list {
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 15px;
+}
+
+.search-form__label {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 5px;
+  align-items: center;   
+}
+
+.search-form__checkbox {
+
 }
 
 .visually-hidden {
@@ -101,20 +132,20 @@ ol {
   white-space: nowrap;
 }
 
-.search-form__textfield {
-
-}
-
-.search-form__checkbox-list {
-
-}
-
-.search-form__checkbox {
-
-}
-
 .search-form__pseudo-checkbox {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+}
 
+.search-form__label-text {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21.6px;
+  color: rgb(255, 255, 255, 0.7);
 }
 
 /* СЕКЦИЯ result - END --- ФОРМЫ */
