--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 30px;
-  height: 535px;
+  /* height: 535px; */
   /* overflow: hidden; */
   /*border: 1px solid #f00f0f;  вспомогательная рамка */
 }
@@ -58,6 +58,7 @@ ol {
   width: 100%;
   height: 386px;
   margin: 78px 0 16px;
+  position: relative;
 }
 
 .result__video {
@@ -109,6 +110,14 @@ ol {
   border-left: 0;
 }
 
+.search-form__textfield:active {
+  border: 1px solid #fff;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
 .search-form__checkbox-list {
   display: flex;
   justify-content: flex-start;
@@ -119,12 +128,21 @@ ol {
   display: flex;
   justify-content: space-between;
   column-gap: 5px;
-  align-items: center;   
+  align-items: center;
+  /* width: fit-content; */
+  cursor: pointer;
+  
 }
 
-.search-form__checkbox {
+/* класс реального чекбокса */
+
+.search-form__checkbox { 
 
 }
+
+/* END -- класс реального чекбокса */
+
+/* сокрытие реального чекбокса */
 
 .visually-hidden {
   position: absolute;
@@ -136,11 +154,30 @@ ol {
   white-space: nowrap;
 }
 
+/* END -- сокрытие реального чекбокса */
+
 .search-form__pseudo-checkbox {
   display: inline-block;
   width: 19px;
   height: 19px;
   border: 1px solid #fff;
+  vertical-align: sub;
+  position: relative;
+}
+
+.search-form__pseudo-checkbox:active::after {
+  content: '';
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  /* border: 1px solid #db0808; вспомогательный контур внутренней заливки */
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  /* transform: translate(-50%, -50%); */
 }
 
 .search-form__label-text {
@@ -150,6 +187,7 @@ ol {
   font-weight: 400;
   line-height: 21.6px;
   color: rgb(255, 255, 255, 0.7);
+  appearance: none;
 }
 
 .search-form__label-text:hover {
@@ -187,6 +225,7 @@ ol {
 .button:active {
   background-color: #545050;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .button:focus-visible {
@@ -243,32 +282,47 @@ ol {
   padding: 2px;
 }
 
-.content__list-item:active {
+.content__list-item:active, .content__card-link_current {
   background-color: #545050;
 } 
 
 .content__card-link {
+  display: inline-block;
   text-decoration: none;
 }
 
-.content__card-link:hover  {
+.content__card-link:hover {
   color: #fff;
   text-decoration: underline;
   text-underline-position: under;
 }
 
-.content__card-link:active  {
+.content__card-link:active {
   text-decoration: none;
 }
 
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
 .content__video-card {
+  width: 399px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
+  /* grid-template-columns: 1fr 194px; */
+  grid-template-columns: minmax(min-content, 1fr) 194px;
+  /* box-sizing: border-box; */
   grid-template-rows: 107px;
 }
 
 .content__video-card-description-container {
+  display: block;
+  width: 100%;
+  align-self: stretch;
   margin-bottom: 4px;
+  padding-top: 2px;
+  padding-left: 2px;
 }
 
 .content__video-card-title {
@@ -291,7 +345,7 @@ ol {
 
 .content__video-card-thumbnail {
   display: block;
-  width: 194px;
+  max-width: 194px;
   height: 100%;
   object-fit: cover;
   object-position: center;
