--- a/styles/style.css
+++ b/styles/style.css
@@ -161,11 +161,12 @@ ol {
 /* END -- сокрытие реального чекбокса */
 
 .search-form__pseudo-checkbox {
-  display: inline-block;
+  display: flex;
   width: 19px;
   height: 19px;
   border: 1px solid #fff;
   vertical-align: sub;
+  /* vertical-align: middle; */
   position: relative;
 }
 
@@ -174,7 +175,7 @@ ol {
   width: 15px;
   height: 15px;
   background-color: #fff;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   bottom: 0;
