--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,7 @@ ol {
   margin-bottom: 34px;
   height: 298px;
   overflow-y: auto;
+  position: relative;
 }
 
 .content__list::-webkit-scrollbar {
