--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,10 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-  padding: 133px 30px 0;
+  display: flex;
+  align-items: center;
+  /* padding: 133px 30px 0; */
+  /* padding: auto 30px; */
 }
 
 h1,
