--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ html {
   background-color: #1b1919;
   display: flex;
   align-items: center;
+  /* justify-content: center; */
 }
 
 h1,
@@ -61,7 +62,7 @@ ol {
 
 .result__video {
   width: 100%;
-  height: 386px;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -94,7 +95,7 @@ ol {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.2;
   color: rgb(255, 255, 255, 0.7);
   background-color: transparent;
   width: 100%;
@@ -102,8 +103,14 @@ ol {
   padding: 0;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-  border-right: 0;
-  border-left: 0;
+  border-right: none;
+  border-left: none;
+  appearance: none;
+  cursor: pointer;
+}
+
+.search-form__textfield:hover {
+  cursor: pointer;
 }
 
 .search-form__textfield:active {
@@ -251,7 +258,7 @@ ol {
   font-family: Oswald, sans-serif;
   font-size: 75px;
   font-weight: 700;
-  line-height: 70.5px;
+  line-height: 0.94;
   color: #fff;
   text-transform: uppercase;
   margin-bottom: 21px;
@@ -269,18 +276,18 @@ ol {
   position: relative;
 }
 
-.content__list::-webkit-scrollbar {
+/* .content__list::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /* END --- СЕКЦИЯ content__details */
 
 /* template карточек */
 
-.cards-list-item-template {
+/* .cards-list-item-template {
   width: 399px;
   box-sizing: border-box;
-}
+} */
 
 .content__list-item {
   width: 100%;
@@ -288,7 +295,11 @@ ol {
   padding: 2px;
 }
 
-.content__list-item:active, .content__card-link_current {
+/* .content__list-item:active {
+  background-color: #545050;
+}  */
+
+.content__card-link_current {
   background-color: #545050;
 } 
 
@@ -304,7 +315,8 @@ ol {
 }
 
 .content__card-link:active {
-  text-decoration: none;
+
+  background-color: #545050;
 }
 
 .content__card-link:focus {
@@ -353,7 +365,7 @@ ol {
 .content__video-card-thumbnail {
   display: block;
   max-width: 194px;
-  height: 100%;
+  height: 103px;
   object-fit: cover;
   object-position: center;
 }
