--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', Arial, sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
@@ -93,7 +93,7 @@ ol {
 }
 
 .search-form__textfield {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -176,22 +176,7 @@ ol {
   position: relative;
 }
 
-/* Исправить по замечанию - чтобы чекбокс включался и выключался
-
-.search-form__pseudo-checkbox:active::after {
-  content: '';
-  width: 15px;
-  height: 15px;
-  background-color: #fff;
-  position: relative;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-} */
-
-input[type='checkbox']:checked + span { /* из теории - не работает, просто меняется квадрат */
+input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   content: '';
   width: 15px;
   height: 15px;
@@ -205,19 +190,13 @@ input[type='checkbox']:checked + span { /* из теории - не работа
 }
 
 .search-form__label-text {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 1.2;
   color: rgb(255, 255, 255, 0.7);
 }
-
-/* .search-form__label-text:hover {
-  text-decoration: underline;
-  text-underline-position: under;
-  cursor: pointer;
-} */
 
 /* СЕКЦИЯ result - END --- ФОРМЫ */
 
@@ -260,6 +239,7 @@ input[type='checkbox']:checked + span { /* из теории - не работа
 .button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
+  margin: 2px;
 }
 
 /* END --- СЕКЦИЯ result */
@@ -268,16 +248,19 @@ input[type='checkbox']:checked + span { /* из теории - не работа
 
 .content__details {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 21px;
 }
 
 .title {
-  font-family: Oswald, sans-serif;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 75px;
   font-weight: 700;
   line-height: 0.94;
   color: #fff;
   text-transform: uppercase;
-  margin-bottom: 21px;
+  /* margin-bottom: 21px; */
 }
 
 .content__accent {
@@ -286,7 +269,6 @@ input[type='checkbox']:checked + span { /* из теории - не работа
 
 .content__list {
   width: 100%;
-  margin-bottom: 34px;
   height: 298px;
   overflow-y: auto;
   position: relative;
@@ -300,7 +282,6 @@ input[type='checkbox']:checked + span { /* из теории - не работа
   width: 100%;
   height: 107px;
   margin-bottom: 30px;
-  /* padding: 2px; */
 }
 
 .content__card-link_current {
@@ -329,6 +310,7 @@ input[type='checkbox']:checked + span { /* из теории - не работа
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
+  margin: 2px;
 }
 
 .content__video-card {
@@ -347,7 +329,7 @@ input[type='checkbox']:checked + span { /* из теории - не работа
 }
 
 .content__video-card-title {
-  font-family: Oswald, sans-serif;
+  font-family: Oswald, Arial, sans-serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 30px;
@@ -357,7 +339,7 @@ input[type='checkbox']:checked + span { /* из теории - не работа
 }
 
 .content__video-card-description {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 16.2px;
